<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5F3D1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="226dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="88dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="122dp"
        android:text="@string/name"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="250dp"
        android:layout_height="33dp"
        android:layout_below="@+id/text1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="161dp"
        android:text="@string/track"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="256dp"
        android:layout_height="35dp"
        android:layout_below="@+id/text2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="165dp"
        android:text="@string/country"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="274dp"
        android:layout_height="34dp"
        android:layout_below="@+id/text3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="42dp"
        android:text="@string/email"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="272dp"
        android:layout_height="44dp"
        android:layout_below="@+id/text4"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="139dp"
        android:text="@string/number"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="266dp"
        android:layout_height="29dp"
        android:layout_below="@+id/text5"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="145dp"
        android:text="@string/slack"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>