<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#857B7E"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#009688"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="281dp"
        android:onClick="openActivity1"
        android:background="#8BC34A"
        android:text="@string/profile"
        android:textStyle="italic" />


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="328dp"
        android:layout_marginBottom="46dp"
        android:background="#8BC34A"
        android:layout_above="@+id/button2"
        android:text="@string/about"
        android:textStyle="italic" />


</RelativeLayout>